[gd_scene load_steps=8 format=3 uid="uid://v17ft4d3kmbs"]

[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_bshw6"]
[ext_resource type="Texture2D" uid="uid://co8mp3r0ncfdt" path="res://textures/skeleton.png" id="2_h0fgm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_i5gav"]
radius = 0.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_03ybj"]
height = 0.001
radius = 4.0

[sub_resource type="Animation" id="Animation_i3i7x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ip0gt"]
resource_name = "skeleton_damage"
length = 0.20001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.353), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(0.94902, 0.592157, 0.580392, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jlavo"]
_data = {
"RESET": SubResource("Animation_i3i7x"),
"skeleton_damage": SubResource("Animation_ip0gt")
}

[node name="Skeleton" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_bshw6")

[node name="Sprite3D" type="Sprite3D" parent="."]
pixel_size = 0.05
billboard = 1
shaded = true
texture_filter = 0
texture = ExtResource("2_h0fgm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_i5gav")

[node name="RayCast3D" type="RayCast3D" parent="."]
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
shape = SubResource("CylinderShape3D_03ybj")

[node name="VisibleOnScreenEnabler3D" type="VisibleOnScreenEnabler3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
navigation_layers = 3

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
visible = false
billboard = 1
texture_filter = 0
text = "[Velocity]"
font_size = 40

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]

[node name="damage_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jlavo")
}

[node name="audio_timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
max_distance = 10.0
bus = &"Dungeon"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="damage_timer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="audio_timer" to="." method="_on_audio_timer_timeout"]
